--- a/templates/index.html
+++ b/templates/index.html
@@ -8,13 +8,21 @@
         <table id="employees" style="width:100%">
             <tbody>
                 <tr>
-                    <th>First Name</th>
-                    <th>Last Name</th>
+                    <th>Nom</th>
+                    <th>Id</th>
+                    <th>Mac</th>
+                    <th>Batterie</th>
+                    <th>Temperature</th>
+                    <th>Humidite</th>
                 </tr>
     {% for row in result %}
         <tr>
-            <td> {{ row.cli_prenom }}</td>
-            <td> {{ row.cli_nom }}</td>
+            <td> {{ row.name }}</td>
+            <td> {{ row.ID }}</td>
+            <td> {{ row.Mac }}</td>
+            <td> {{ row.battery }} %</td>
+            <td> {{ row.temperature }} °</td>
+            <td> {{ row.humidity }} %</td>
         </tr>
     {% endfor %}
          </tbody>
