--- a/templates/index.html
+++ b/templates/index.html
@@ -15,27 +15,28 @@
                 <h1 class="title has-text-centered has-text-white">Station Météo</h1>
             </div>
         </div>
-        <div class="columns">
-            <div class="column">
+        <div class="column">
                 <div class="card">
                     <div class="card-image">
-                        <figure class="image is-4by3">
+                        <figure class="image is-square">
                             <a href="/sensor/id">
-                                <img src="https://picsum.photos/1280/960/?84" alt="sensor">
+                                <img src="https://picsum.photos/300/300/?84" alt="sensor">
                             </a>
                         </figure>
                     </div>
                     <div class="card-content">
                         <div class="media">
                             <div class="media-content has-text-centered">
-
                                 <p class="title is-4"><i class="fas fa-edit"></i> nom sensor</p>
                                 <p class="subtitle is-6">id sensor</p>
                             </div>
                         </div>
 
                         <div class="content">
-                            <div>mac address</div>
+                            <div>
+                                <i class="fas fa-hdd"></i>
+                                mac address
+                            </div>
                             <div>
                                 <i class="fas fa-battery-empty"></i>
                                 <i class="fas fa-battery-quarter"></i>
@@ -44,8 +45,14 @@
                                 batterie
                             </div>
                             <br>
-                            <div>humidité</div>
-                            <div>temperature</div>
+                            <div>
+                                <i class="fas fa-tint"></i>
+                                humidité
+                            </div>
+                            <div>
+                                <i class="fas fa-temperature-high"></i>
+                                temperature
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -53,23 +60,25 @@
             <div class="column">
                 <div class="card">
                     <div class="card-image">
-                        <figure class="image is-4by3">
+                        <figure class="image is-square">
                             <a href="/sensor/id">
-                                <img src="https://picsum.photos/1280/960/?94" alt="sensor">
+                                <img src="https://picsum.photos/300/300/?94" alt="sensor">
                             </a>
                         </figure>
                     </div>
                     <div class="card-content">
                         <div class="media">
                             <div class="media-content has-text-centered">
-
                                 <p class="title is-4"><i class="fas fa-edit"></i> nom sensor</p>
                                 <p class="subtitle is-6">id sensor</p>
                             </div>
                         </div>
 
                         <div class="content">
-                            <div>mac address</div>
+                            <div>
+                                <i class="fas fa-hdd"></i>
+                                mac address
+                            </div>
                             <div>
                                 <i class="fas fa-battery-empty"></i>
                                 <i class="fas fa-battery-quarter"></i>
@@ -78,15 +87,25 @@
                                 batterie
                             </div>
                             <br>
-                            <div>humidité</div>
-                            <div>temperature</div>
+                            <div>
+                                <i class="fas fa-tint"></i>
+                                humidité
+                            </div>
+                            <div>
+                                <i class="fas fa-temperature-high"></i>
+                                temperature
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+                integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+                crossorigin="anonymous"></script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
         <script src="/static/js/app.js"></script>
+        <script src="/static/js/rename_sensor.js"></script>
 </body>
 </html>
