--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,11 +3,11 @@ html, body {
     height: 100vh;
 }
 
-.card :hover {
-    opacity: 0.3;
+.card {
+    opacity: 0.7;
 }
 
-.card :hover {
+.card:hover {
     opacity: 1;
 }
 
@@ -17,4 +17,8 @@ html, body {
 
 .fa-edit:hover {
     cursor: pointer;
+}
+
+.field.has-addons {
+    justify-content: center;
 }
