--- a/templates/index.html
+++ b/templates/index.html
@@ -1,114 +1,97 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <title>Station meteo</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" href="/static/css/style.css">
-</head>
-<body class="has-background-grey">
-
-<div class="container is-vcentered">
-    <div class="colulms">
-        <div class="column">
-            <h1 class="title has-text-centered has-text-white">Station Météo</h1>
+{% extends "layout/app.html" %}
+{% block content %}
+    <div class="container-fluid h100 has-background-grey">
+        <div class="colulms">
+            <div class="column">
+                <h1 class="title has-text-centered has-text-white">Station Météo</h1>
+            </div>
         </div>
-    </div>
-    <div class="columns">
+        <div class="columns">
 
-        <div class="column">
-            <div class="card">
-                <div class="card-image">
-                    <figure class="image is-4by3">
-                        <a href="/sensor/id">
-                            <img src="https://picsum.photos/400/400/?84" alt="sensor">
-                        </a>
-                    </figure>
-                </div>
-                <div class="card-content">
-                    <div class="media">
-                        <div class="media-content has-text-centered">
-                            <p class="title is-4"><i class="fas fa-edit"></i> nom sensor</p>
-                            <p class="subtitle is-6">id sensor</p>
-                        </div>
+            <div class="column">
+                <div class="card">
+                    <div class="card-image">
+                        <figure class="image is-2by1">
+                            <a href="/sensor/id">
+                                <img src="https://picsum.photos/640/320/?85" alt="sensor">
+                            </a>
+                        </figure>
                     </div>
+                    <div class="card-content">
+                        <div class="media">
+                            <div class="media-content has-text-centered">
+                                <p class="title is-4"><i class="fas fa-edit"></i> nom sensor</p>
+                                <p class="subtitle is-6">id sensor</p>
+                            </div>
+                        </div>
 
-                    <div class="content">
-                        <div>
-                            <i class="fas fa-hdd"></i>
-                            mac address
-                        </div>
-                        <div>
-                            <i class="fas fa-battery-empty"></i>
-                            <i class="fas fa-battery-quarter"></i>
-                            <i class="fas fa-battery-half"></i>
-                            <i class="fas fa-battery-full"></i>
-                            batterie
-                        </div>
-                        <br>
-                        <div>
-                            <i class="fas fa-tint"></i>
-                            humidité
-                        </div>
-                        <div>
-                            <i class="fas fa-temperature-high"></i>
-                            temperature
+                        <div class="content">
+                            <div>
+                                <i class="fas fa-hdd"></i>
+                                mac address
+                            </div>
+                            <div>
+                                <i class="fas fa-battery-empty"></i>
+                                <i class="fas fa-battery-quarter"></i>
+                                <i class="fas fa-battery-half"></i>
+                                <i class="fas fa-battery-full"></i>
+                                batterie
+                            </div>
+                            <br>
+                            <div>
+                                <i class="fas fa-tint"></i>
+                                humidité
+                            </div>
+                            <div>
+                                <i class="fas fa-temperature-high"></i>
+                                temperature
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="column">
-            <div class="card">
-                <div class="card-image">
-                    <figure class="image is-4by3">
-                        <a href="/sensor/id">
-                            <img src="https://picsum.photos/400/400/?94" alt="sensor">
-                        </a>
-                    </figure>
-                </div>
-                <div class="card-content">
-                    <div class="media">
-                        <div class="media-content has-text-centered">
-                            <p class="title is-4"><i class="fas fa-edit"></i> nom sensor</p>
-                            <p class="subtitle is-6">id sensor</p>
-                        </div>
+            <div class="column">
+                <div class="card">
+                    <div class="card-image">
+                        <figure class="image is-2by1">
+                            <a href="/sensor/id">
+                                <img src="https://picsum.photos/640/320/?94" alt="sensor">
+                            </a>
+                        </figure>
                     </div>
+                    <div class="card-content">
+                        <div class="media">
+                            <div class="media-content has-text-centered">
+                                <p class="title is-4"><i class="fas fa-edit"></i> nom sensor</p>
+                                <p class="subtitle is-6">id sensor</p>
+                            </div>
+                        </div>
 
-                    <div class="content">
-                        <div>
-                            <i class="fas fa-hdd"></i>
-                            mac address
-                        </div>
-                        <div>
-                            <i class="fas fa-battery-empty"></i>
-                            <i class="fas fa-battery-quarter"></i>
-                            <i class="fas fa-battery-half"></i>
-                            <i class="fas fa-battery-full"></i>
-                            batterie
-                        </div>
-                        <br>
-                        <div>
-                            <i class="fas fa-tint"></i>
-                            humidité
-                        </div>
-                        <div>
-                            <i class="fas fa-temperature-high"></i>
-                            temperature
+                        <div class="content">
+                            <div>
+                                <i class="fas fa-hdd"></i>
+                                mac address
+                            </div>
+                            <div>
+                                <i class="fas fa-battery-empty"></i>
+                                <i class="fas fa-battery-quarter"></i>
+                                <i class="fas fa-battery-half"></i>
+                                <i class="fas fa-battery-full"></i>
+                                batterie
+                            </div>
+                            <br>
+                            <div>
+                                <i class="fas fa-tint"></i>
+                                humidité
+                            </div>
+                            <div>
+                                <i class="fas fa-temperature-high"></i>
+                                temperature
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
-<script src="/static/js/app.js"></script>
-<script src="/static/js/rename_sensor.js"></script>
-</body>
-</html>
+{% endblock %}
