affichage des infos

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,31 +20,31 @@
                     <div class="card-content">
                         <div class="media">
                             <div class="media-content has-text-centered">
-                                <p class="title is-4"><i class="fas fa-edit"></i> nom sensor</p>
-                                <p class="subtitle is-6">id sensor</p>
+                                <p class="title is-4"><i class="fas fa-edit"></i><span id="nomSensor"></span></p>
+                                <p class="subtitle is-6"><span id="idSensor"></span></p>
                             </div>
                         </div>
 
                         <div class="content">
                             <div>
                                 <i class="fas fa-hdd"></i>
-                                mac address
+                                Mac adresse :<span id="macAdresse"></span>
                             </div>
                             <div>
                                 <i class="fas fa-battery-empty"></i>
                                 <i class="fas fa-battery-quarter"></i>
                                 <i class="fas fa-battery-half"></i>
                                 <i class="fas fa-battery-full"></i>
-                                batterie
+                                Batterie :<span id="batterie"></span>%
                             </div>
                             <br>
                             <div>
                                 <i class="fas fa-tint"></i>
-                                humidité
+                                Humidité :<span id="humidite"></span>%
                             </div>
                             <div>
                                 <i class="fas fa-temperature-high"></i>
-                                temperature
+                                Temperature : <span id="temperature"></span>°
                             </div>
                         </div>
                     </div>
@@ -62,31 +62,31 @@
                     <div class="card-content">
                         <div class="media">
                             <div class="media-content has-text-centered">
-                                <p class="title is-4"><i class="fas fa-edit"></i> nom sensor</p>
-                                <p class="subtitle is-6">id sensor</p>
+                                <p class="title is-4"><i class="fas fa-edit"></i> <span id="nomSensor2"></span></p>
+                                <p class="subtitle is-6"><span id="idSensor2"></span></p>
                             </div>
                         </div>
 
                         <div class="content">
                             <div>
                                 <i class="fas fa-hdd"></i>
-                                mac address
+                                Mac adresse :<span id="macAdresse2"></span>
                             </div>
                             <div>
                                 <i class="fas fa-battery-empty"></i>
                                 <i class="fas fa-battery-quarter"></i>
                                 <i class="fas fa-battery-half"></i>
                                 <i class="fas fa-battery-full"></i>
-                                batterie
+                                Batterie :<span id="batterie2"></span>%
                             </div>
                             <br>
                             <div>
                                 <i class="fas fa-tint"></i>
-                                humidité
+                                Humidité :<span id="humidite2"></span>%
                             </div>
                             <div>
                                 <i class="fas fa-temperature-high"></i>
-                                temperature
+                                Temperature : <span id="temperature2"></span>°
                             </div>
                         </div>
                     </div>
