template html a jour

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,10 +34,11 @@
                                 Mac adresse : <span id="macAdresse"></span>
                             </div>
                             <div>
-                                <i class="fas fa-battery-empty" style="display: none"></i>
-                                <i class="fas fa-battery-quarter" style="display: none"></i>
-                                <i class="fas fa-battery-half" style="display: none"></i>
-                                <i class="fas fa-battery-full" style="display: none"></i>
+                                <i id="batterie-empty" class="fas fa-battery-empty" style="display: none"></i>
+                                <i id="batterie-quarter" class="fas fa-battery-quarter" style="display: none"></i>
+                                <i id="batterie-half" class="fas fa-battery-half" style="display: none"></i>
+                                <i id="batterie-three-quarters" class="fas fa-battery-three-quarters" style="display: none"></i>
+                                <i id="batterie-full" class="fas fa-battery-full" style="display: none"></i>
                                 Batterie : <span id="batterie"></span>%
                             </div>
                             <br>
@@ -80,10 +81,11 @@
                                 Mac adresse : <span id="macAdresse2"></span>
                             </div>
                             <div>
-                                <i class="fas fa-battery-empty" style="display: none"></i>
-                                <i class="fas fa-battery-quarter" style="display: none"></i>
-                                <i class="fas fa-battery-half" style="display: none"></i>
-                                <i class="fas fa-battery-full" style="display: none"></i>
+                                <i id="batterie2-empty" class="fas fa-battery-empty" style="display: none"></i>
+                                <i id="batterie2-quarter" class="fas fa-battery-quarter" style="display: none"></i>
+                                <i id="batterie2-half" class="fas fa-battery-half" style="display: none"></i>
+                                <i id="batterie2-three-quarters" class="fas fa-battery-three-quarters" style="display: none"></i>
+                                <i id="batterie2-full" class="fas fa-battery-full" style="display: none"></i>
                                 Batterie : <span id="batterie2"></span>%
                             </div>
                             <br>
