add url for sensor

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
                 <div class="card">
                     <div class="card-image">
                         <figure class="image is-2by1">
-                            <a href="/sensor/">
+                            <a id="sensor1">
                                 <img src="https://picsum.photos/640/320/?85" alt="sensor">
                             </a>
                         </figure>
@@ -62,7 +62,7 @@
                 <div class="card">
                     <div class="card-image">
                         <figure class="image is-2by1">
-                            <a href="/sensor/id">
+                            <a id="sensor2">
                                 <img src="https://picsum.photos/640/320/?94" alt="sensor">
                             </a>
                         </figure>
