bug js function onclick ??

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,8 +23,8 @@
                     <div class="card-content">
                         <div class="media">
                             <div class="media-content has-text-centered">
-                                <p class="title is-4"><i class="fas fa-edit"></i><span id="nomSensor"></span></p>
-                                <p class="subtitle is-6"><span id="idSensor"></span></p>
+                                <p class="title is-4"><i class="fas fa-edit" onclick="editName()"></i><span id="nomSensor"></span></p>
+                                <p id="editSensor1" class="subtitle is-6"><span id="idSensor"></span></p>
                             </div>
                         </div>
 
@@ -73,8 +73,8 @@
                     <div class="card-content">
                         <div class="media">
                             <div class="media-content has-text-centered">
-                                <p class="title is-4"><i class="fas fa-edit"></i> <span id="nomSensor2"></span></p>
-                                <p class="subtitle is-6"><span id="idSensor2"></span></p>
+                                <p class="title is-4"><i class="fas fa-edit" onclick="editName(this)"></i> <span id="nomSensor2"></span></p>
+                                <p id="editSensor2" class="subtitle is-6"><span id="idSensor2"></span></p>
                             </div>
                         </div>
 
@@ -123,8 +123,8 @@
                     <div class="card-content">
                         <div class="media">
                             <div class="media-content has-text-centered">
-                                <p class="title is-4"><i class="fas fa-edit"></i><span id="nomApi"></span></p>
-                                <p class="subtitle is-6"><span id="idApi"></span></p>
+                                <p class="title is-4"><i class="fas fa-edit" onclick="editName(this)"></i><span id="nomApi"></span></p>
+                                <p cid="editApi" lass="subtitle is-6"><span id="idApi"></span></p>
                             </div>
                         </div>
 
