--- a/templates/layout/app.html
+++ b/templates/layout/app.html
@@ -9,6 +9,6 @@
     {% block content %}{% endblock %}
 
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
-    <script src="/static/build/public/js/app.js"></script>
+    <script type="text/javascript" src="/static/build/public/js/app.js"></script>
 </body>
 </html>
