--- a/templates/index.html
+++ b/templates/index.html
@@ -23,14 +23,14 @@
                     <div class="card-content">
                         <div class="media">
                             <div class="media-content has-text-centered">
-                                <p class="title is-4"><i class="fas fa-edit" onclick="editName()"></i><span id="nomSensor"></span></p>
+                                <p class="title is-4"><i class="fas fa-edit" onclick="alert('okok')"></i><span id="nomSensor"></span></p>
                                 <p id="editSensor1" class="subtitle is-6"><span id="idSensor"></span></p>
                             </div>
                         </div>
 
                         <div class="content">
                             <div>
-                                <i class="far fa-circle"></i>
+                                <i id="signal" class="far fa-circle"></i>
                             </div>
                             <div>
                                 <i class="fas fa-hdd"></i>
@@ -80,7 +80,7 @@
 
                         <div class="content">
                             <div>
-                                <i class="far fa-circle"></i>
+                                <i id="signal2" class="far fa-circle"></i>
                             </div>
                             <div>
                                 <i class="fas fa-hdd"></i>
@@ -130,7 +130,7 @@
 
                         <div class="content">
                             <div>
-                                <i class="far fa-circle"></i>
+                                <i id="signal3" class="far fa-circle"></i>
                             </div>
                             <div>
                                 <i class="fas fa-clock"></i>
