--- a/static/sass/_cards.scss
+++ b/static/sass/_cards.scss
@@ -1,11 +1,19 @@
 .card {
-    opacity: 0.7;
-}
+  opacity: 0.7;
 
-.card:hover {
+  &:hover {
     opacity: 1;
-}
+  }
 
-.card-image:hover {
+  &-image:hover {
     cursor: pointer;
+  }
+
+  &-content {
+    min-height: 300px;
+  }
+
+  &-footer {
+    max-height: 50px;
+  }
 }
