--- a/static/sass/app.scss
+++ b/static/sass/app.scss
@@ -14,6 +14,8 @@ $fa-font-path: "/static/webfonts";
 
 @import "~bulma";
 
+@import "helpers";
 @import "globals";
 @import "icons";
 @import "cards";
+@import "ranges";
