--- a/templates/layout/app.html
+++ b/templates/layout/app.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     {% block title %}{% endblock %}
     <link rel="stylesheet" href="/static/build/public/css/app.css">
+    <link href="/static/images/favicon.ico" rel="icon" type="image/x-icon" />
 </head>
 <body>
     {% block content %}{% endblock %}
