--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
                     <div class="card-content">
                         <div class="media">
                             <div class="media-content has-text-centered">
-                                <p class="title is-4"><i class="fas fa-edit" onclick="alert('okok')"></i><span id="nomSensor"></span></p>
+                                <p class="title is-4"><i class="fas fa-edit" onclick="editName(this)"></i><span id="nomSensor"></span></p>
                                 <p id="editSensor1" class="subtitle is-6"><span id="idSensor"></span></p>
                             </div>
                         </div>
