--- a/templates/data_sensor.html
+++ b/templates/data_sensor.html
@@ -6,7 +6,7 @@
 
     <div class="container-fluid">
 
-        <a href="/" class="button is-grey mt-5 ml-5"><i class="fas fa-home"></i></a>
+        <a href="/" class="button is-large is-grey mt-5 ml-5"><i class="fas fa-home fa-2x"></i></a>
         <h1 class="title has-text-centered has-text-white pb-5 pt-3">{{ result[0].name }}</h1>
 
         <div class="columns">
