--- a/templates/data_sensor.html
+++ b/templates/data_sensor.html
@@ -36,15 +36,22 @@
                         </p>
                         <br>
                         <p class="field">
-                            <label class="label">Seuil alerte température</label>
-                            <input id="range-temperature"  type="range" min="0" max="50" step="0.5">
-                            <p>Valeur: <span>°</span></p>
+                            <label class="label">Seuil alerte température min</label>
+                            <input id="range-temperature-min"  type="range" min="0" max="50" step="0.5">
+                            <br>
+                            <label class="label">Seuil alerte température max</label>
+                            <input id="range-temperature-max"  type="range" min="0" max="50" step="0.5">
+                            <p>Valeur min : <span>°</span></p>
+                            <p>Valeur max : <span>°</span></p>
                         </p>
                         <br>
                         <p class="field">
-                            <label class="label">Seuil alerte humidité</label>
-                            <input id="range-humidite" type="range" min="0" max="100" step="0.5">
-                            <p>Valeur: <span>%</span></p>
+                            <label class="label">Seuil alerte humidité min</label>
+                            <input id="range-humidite-min" type="range" min="0" max="100" step="0.5">
+                            <label class="label">Seuil alerte humidité max</label>
+                            <input id="range-humidite-max" type="range" min="0" max="100" step="0.5">
+                            <p>Valeur min: <span>%</span></p>
+                            <p>Valeur max: <span>%</span></p>
                         </p>
                     </div>
                     <footer class="card-footer">
