--- a/templates/index.html
+++ b/templates/index.html
@@ -124,8 +124,8 @@
                     <div class="card-content">
                         <div class="media">
                             <div class="media-content has-text-centered">
-                                <p class="title is-4"><i class="fas fa-edit" onclick="editName(this)"></i><span id="nomApi"></span></p>
-                                <p cid="editApi" lass="subtitle is-6"><span id="idApi"></span></p>
+                                <p class="title is-4"><i class="fas fa-edit" onclick="editName(this)"></i><span id="nomSensor3"></span></p>
+                                <p cid="editApi" lass="subtitle is-6"><span id="idSensor3"></span></p>
                             </div>
                         </div>
 
