--- a/templates/index.html
+++ b/templates/index.html
@@ -116,7 +116,7 @@
                 <div class="card">
                     <div class="card-image">
                         <figure class="image is-2by1">
-                            <a href="/sensor/">
+                            <a id="sensor3" href="/sensor/">
                                 <img src="https://picsum.photos/640/320/?88" alt="sensor">
                             </a>
                         </figure>
@@ -125,8 +125,7 @@
                         <div class="media">
                             <div class="media-content has-text-centered">
                                 <p class="title is-4"><i class="fas fa-edit" onclick="editName(this)"></i><span id="nomSensor3"></span></p>
-                                <p cid="editApi" lass="subtitle is-6"><span id="idSensor3"></span></p>
-                            </div>
+                             </div>
                         </div>
 
                         <div class="content">
