rename interface ok

--- a/templates/index.html
+++ b/templates/index.html
@@ -125,6 +125,7 @@
                         <div class="media">
                             <div class="media-content has-text-centered">
                                 <p class="title is-4"><i class="fas fa-edit" onclick="editName(this)"></i><span id="nomSensor3"></span></p>
+                                <p id="editApi1" class="subtitle is-6"><span id="villeApi">Bordeaux</span></p>
                              </div>
                         </div>
 
