--- a/templates/data_sensor.html
+++ b/templates/data_sensor.html
@@ -96,6 +96,10 @@
 
                     <div class="is-flex justify-center mb-2">
 
+                        <button class="button is-success mr-1">
+                            <i class="fas fa-file-excel"></i>
+                        </button>
+
                         <button class="button is-primary mr-2">
                             <i class="fas fa-sync"></i>
                         </button>
